# dynaface

./: .flake8  .git-blame-ignore-revs  .gitignore  CITATION.bib  CLAUDE.md  FAQ.md  Jenkinsfile-deploy  Jenkinsfile-lib  LICENSE.txt  README.md  build_all.sh  build_debug.ps1  build_debug.sh  constraints.txt  requirements.txt  setup.py
.github/workflows/: build-app-macos.yml  build-app-windows.yml  build-lib-dotnet.yml  build-lib.yml  deploy-lib.yml
dynaface-app/: README.md  const_values.py  dlg_modal.py  dynaface.py  dynaface_app.py  dynaface_document.py  dynaface_window.py  manual-app.md  manual-mobile.md  manual.md  requirements.txt  tab_about.py  tab_analyze_image.py  tab_analyze_laterial.py  tab_analyze_video.py  tab_eval.py  tab_settings.py  tab_splash.py  test.py  test_cv2.py  testme.py  utl.py  utl_general.py  utl_gfx.py  utl_print.py  version.py  worker_threads.py
dynaface-app/deploy/macos/: build.sh  constraints.txt  dynaface-macos.spec  dynaface_doc_icon.icns  dynaface_icon.icns  entitlements.plist
dynaface-app/deploy/windows/: build.ps1  constraints.txt  dynaface-windows.spec  rthook_diag.py  rthook_paths.py  test_cv2.spec
dynaface-app/jth_ui/: __init__.py  app_const.py  app_jth.py  overlay.py  tab_graphic.py  utl_classes.py  utl_env.py  utl_etc.py  utl_log.py  utl_settings.py  window_jth.py
dynaface-lib/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
dynaface-lib-dotnet/: .gitignore  CLAUDE.md  FacialDll.sln  README.md
dynaface-lib-dotnet/DynafaceTests/: DynafaceMeasuresTests.cs  DynafaceTests.csproj  FaceMeasureBaseTests.cs  FacialPipelineIntegrationTests.cs  GeometryTests.cs  ImageUtilsTests.cs  MeasureLandmarksTests.cs  ModelFixture.cs  ModelPathResolver.cs  MonotonicCornerFinderTests.cs  NmsTests.cs  PeakFinderTests.cs  PersistenceIntegrationTests.cs  PipelineReadinessTests.cs  SavitzkyGolayTests.cs  TestHelpers.cs
dynaface-lib-dotnet/FacialDll.Onnx/: FacialDll.Onnx.csproj  OnnxDynafaceInference.cs  README.md
dynaface-lib-dotnet/FacialDllConsole/: FacialDllConsole.csproj  ImageLoader.cs  Program.cs
dynaface-lib-dotnet/facial_dll/: BlazeFaceDetector.cs  CLAUDE.md  ColorUtils.cs  Dynaface.asmdef  DynafaceConfig.cs  DynafaceConstants.cs  DynafaceMeasures.cs  FaceAnalysisState.cs  FaceImage.cs  FaceMeasureBase.cs  FaceMeasureContext.cs  FacePipeline.cs  FacePose.cs  FaceRenderer.cs  FacialDll.asmdef  FacialDll.csproj  IDynafaceInference.cs  ImageUtils.cs  LateralCropper.cs  MathHelpers.cs  PoseClassifier.cs  README.md  Rgba32.cs  SpigaLandmarkDetector.cs  StyleGanCropper.cs  Vec2.cs  Vec2i.cs
dynaface-lib-python/: README.md  setup.cfg
dynaface-lib-python/dynaface/: dynaface_onnx.py  facial.py  lateral.py  measures.py  measures_lateral.py  resample.py  version.py
dynaface-lib-python/examples/: dynaface_intro.ipynb
dynaface-lib-python/tests/: test_facial.py  test_persist.py  test_resample.py
dynaface-lib/dynaface/: __init__.py  dynaface_onnx.py  facial.py  image.py  lateral.py  measures.py  measures_frontal.py  measures_lateral.py  measures_skin.py  models.py  util.py  version.py  video.py
dynaface-lib/dynaface/__pyinstaller/: __init__.py  hook-dynaface.py
dynaface-lib/dynaface/spiga/data/loaders/: alignments.py  dataloader.py  dl_config.py  transforms.py
dynaface-lib/dynaface/spiga/data/loaders/augmentors/: boundary.py  heatmaps.py  landmarks.py  modern_posit.py  utils.py
dynaface-lib/dynaface/spiga/inference/: config.py  framework.py  pretreatment.py
dynaface-lib/dynaface/spiga/models/: spiga.py
dynaface-lib/dynaface/spiga/models/cnn/: cnn_multitask.py  hourglass.py  layers.py
dynaface-lib/dynaface/spiga/models/gnn/: gat.py  pose_proj.py  step_regressor.py
dynaface-lib/examples/: Untitled.ipynb  dynaface_intro.ipynb  early_facial_colab.ipynb  facepoints.py  process_image.py  process_media.py  quick_test.py  test.py
dynaface-lib/facial_analysis/: __init__.py  calc.py  facial.py  find_face.py  image.py  lateral.py  measures.py  models.py  test.txt  util.py  video.py
dynaface-lib/facial_analysis/__pyinstaller/: __init__.py  hook-facial_analysis.py
dynaface-lib/facial_analysis/spiga/data/loaders/: alignments.py  dl_config.py  transforms.py
dynaface-lib/facial_analysis/spiga/data/loaders/augmentors/: landmarks.py  modern_posit.py  utils.py
dynaface-lib/facial_analysis/spiga/inference/: framework.py  pretreatment.py
dynaface-lib/facial_analysis/spiga/models/cnn/: cnn_multitask.py
dynaface-lib/facial_analysis/spiga/models/gnn/: gat.py
dynaface-lib/tests/: test_facial.py  test_image.py  test_measures_landmarks.py  test_persist.py  test_util.py  test_video.py  test_zero_tupple.py
examples/: facepoints.py  process_image.py  process_media.py  process_video.py  test.py
facial_analysis/: calc.py  facial.py  image.py  util.py  video.py
scripts/: test_whl.ps1  test_whl.sh
tests/: test_image.py
(+30 files in other folders)
