[metadata]
name = facial_analysis
version = 0.1.0
url = https://github.com/jeffheaton/facial-analysis
author = Jeff Heaton
author_email = jeff@jeffheaton.com
description = Description of my package

[options]
install_requires =
    opencv-python>=4.7.0
    Pillow>=8.4.0
    matplotlib>=3.7.1
    scikit-learn>=1.2.2
    rembg>=2.0.0
    facenet-pytorch
packages = find: 

[options.package_data]
facial_analysis = spiga/data/annotations/**/*, spiga/models/weights/**/*, spiga/data/models3D/*.txt

[options.entry_points]
pyinstaller40 =
  hook-dirs = facial_analysis.__pyinstaller:get_hook_dirs
  tests     = facial_analysis.__pyinstaller:get_PyInstaller_tests