[metadata]
name = dynaface
version = 0.1.10
url = https://github.com/jeffheaton/dynaface
author = Jeff Heaton
author_email = jeff@jeffheaton.com
description = Description of my package

[options]
install_requires =
    opencv-python>=4.7.0
    Pillow>=8.4.0
    matplotlib>=3.7.1
    scikit-learn>=1.2.2
    onnxruntime>=1.21.0
    rembg>=2.0.0
    facenet-pytorch
packages = find: 

[options.package_data]
dynaface = spiga/data/annotations/**/*, spiga/models/weights/**/*, spiga/data/models3D/*.txt

[options.entry_points]
pyinstaller40 =
  hook-dirs = dynaface.__pyinstaller:get_hook_dirs
  tests     = dynaface.__pyinstaller:get_PyInstaller_tests