[metadata]
name = dynaface
version = 0.1.12
url = https://github.com/jeffheaton/dynaface
author = Jeff Heaton
author_email = jeff@jeffheaton.com
description = Facial landmark analysis and symmetry measurement tool for facial paralysis.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = Apache Software License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache License 2.0
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Recognition
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    opencv-python>=4.7.0
    Pillow>=8.4.0
    matplotlib>=3.7.1
    scikit-learn>=1.2.2
    onnxruntime>=1.21.0
    rembg>=2.0.0
    facenet-pytorch
include_package_data = true
python_requires = >=3.8

[options.package_data]
dynaface = 
    spiga/data/annotations/**/*
    spiga/models/weights/**/*
    spiga/data/models3D/*.txt

[options.entry_points]
pyinstaller40 =
    hook-dirs = dynaface.__pyinstaller:get_hook_dirs
    tests = dynaface.__pyinstaller:get_PyInstaller_tests

[options.extras_require]
test =
    pytest
    coverage
